2006-04-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb: disable OCIServerRelease checking.
	    That's because mswin32 binary is for 8.1 or later, but 8.1.5
	    doesn't have OCIServerRelease.
	* ext/oci8/oci8.c: call ruby_setenv on loading oci8lib.so. This is
	    a workaround for the following problem: OCIInitialize()
	    implicitly set environment variables. But is make environment
	    variables invalid when setting $0.
	* ext/oci8/oraconf.rb: fix for OracleXE windows version. OracleXE's
	    registry path is \\HKEY_LOCAL_MACHINE\SOFTWARE\ORACLE\KEY_XE.

2006-04-23  KUBO Takehiro  <kubo@jiubao.org>
	* Makefile: change version to 0.1.15.
	* README: add note for Intel Mac.
	* ext/oci8/extconf.rb: change version to 0.1.15.

2006-04-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/attr.c: Fix segmentation fault while GC runs at exit.
	    It was caused by freeing OCIEnv before freeing OCIRowid.
	    Now when freeing OCIEnv, OCIRowid is freed in advance.
	* ext/oci8/const.c, ext/oci8/handle.c, ext/oci8/oci8.h, ext/oci8/stmt.c:
	    Fix a memory leak when binding a placeholder which is already
	    bound. In C layer, bind handles were registered to an Array.
	    There is no chance to unregister it except closing Cursor.
	    Now bind handles are registered to a Hash. When already bound
	    placeholder is bound, the old bind handle is unregistered.
	* lib/oci8.rb.in: initialize @prefetch_rows.

2006-03-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: add check_ruby_header to warn when
	    broken darwin ruby.
	    add export #{ld_path} in check_instant_client().

2006-02-26  KUBO Takehiro  <kubo@jiubao.org>
	release as 0.1.14.
	* ext/oci8/const.c: add OCI_PTYPE_UNK.

2006-02-25  KUBO Takehiro  <kubo@jiubao.org>
	* Makefile: change version to 0.1.14.
	* ext/oci8/bind.c: fix to accept OCIBind#set(aNumeric).
	* ext/oci8/extconf.rb: change version to 0.1.14.
	    fix to compile ocinumber.c also.